--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-simple-star-rating": "^4.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
