--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "boxicons": "^2.1.2",
+    "cloudinary-react": "^1.7.2",
     "eslint-config-react-app": "^6.0.0",
     "firebase": "^9.6.8",
     "i": "^0.3.7",
@@ -21,6 +22,7 @@
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
+    "react-jwt": "^1.1.5",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
