--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-react-app": "^6.0.0",
     "firebase": "^9.6.8",
     "i": "^0.3.7",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
