--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-jwt": "^1.1.5",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
     "react-simple-star-rating": "^4.0.5",
     "reactstrap": "^9.0.2",
     "styled-components": "^5.3.5",
