--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-simple-star-rating": "^4.0.5",
     "reactstrap": "^9.0.2",
     "styled-components": "^5.3.5",
+    "sweetalert": "^2.1.2",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
