--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.1",
+    "react-simple-image-slider": "^2.4.1",
     "react-simple-star-rating": "^4.0.5",
     "react-slick": "^0.29.0",
     "reactstrap": "^9.0.2",
@@ -40,10 +41,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripes eject"
   },
   "eslintConfig": {
     "extends": [
