--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-simple-image-slider": "^2.4.1",
     "react-simple-star-rating": "^4.0.5",
     "react-slick": "^0.29.0",
+    "react-slideshow-image": "^3.7.5",
     "reactstrap": "^9.0.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
