--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
+    "react-image-zoom": "^1.3.1",
+    "react-inner-image-zoom": "^3.0.0",
     "react-jwt": "^1.1.5",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.2.2",
@@ -40,7 +42,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
