--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "i": "^0.3.7",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-currency-format": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-facebook-login": "^4.1.1",
