--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-image-zoom": "^1.3.1",
     "react-inner-image-zoom": "^3.0.0",
     "react-jwt": "^1.1.5",
+    "react-paginate": "^8.1.3",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.1",
