--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "bootstrap-icons": "^1.8.1",
     "boxicons": "^2.1.2",
     "cloudinary-react": "^1.7.2",
-    "firebase": "^9.6.8",
+    "firebase": "^7.24.0",
     "i": "^0.3.7",
     "jwt-decode": "^3.1.2",
+    "moment-timezone": "^0.5.34",
     "react": "^17.0.2",
     "react-currency-format": "^1.1.0",
     "react-dom": "^17.0.2",
@@ -28,6 +29,7 @@
     "react-image-zoom": "^1.3.1",
     "react-inner-image-zoom": "^3.0.0",
     "react-jwt": "^1.1.5",
+    "react-moment": "^1.1.2",
     "react-paginate": "^8.1.3",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.2.2",
